--- a/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
+++ b/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
@@ -8,6 +8,7 @@ phpIniOverride  {
     php_admin_value upload_max_filesize "32M"
     php_admin_value memory_limit "256M"
     php_admin_value sys_temp_dir $VH_ROOT/temp
+    php_admin_value sendmail_path /usr/bin/msmtp -t
     php_admin_value error_log $VH_ROOTlogs/php_error.log
     php_admin_value mail.log $VH_ROOTlogs/php_mail.log
 }
