Update log files

--- a/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
+++ b/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
@@ -12,3 +12,30 @@ phpIniOverride  {
     php_admin_value error_log $VH_ROOTlogs/php_error.log
     php_admin_value mail.log $VH_ROOTlogs/php_mail.log
 }
+
+errorlog $VH_ROOT/logs/error.log {
+    useServer             0
+    logLevel              NOTICE
+    rollingSize           10M
+    keepDays              7
+}
+
+accesslog $VH_ROOT/logs/access.log {
+    useServer             0
+    logFormat             %a %l %u %t "%r" %>s %O "%{Referer}i" "%{User-Agent}i"
+    logHeaders            5
+    rollingSize           10M
+    keepDays              7
+}
+
+accesslog $VH_ROOT/logs/transfer.log {
+    useServer             0
+    logFormat             %O
+    rollingSize           0
+}
+
+accesslog $VH_ROOT/logs/visitors.log {
+    useServer             0
+    logFormat             %a
+    rollingSize           0
+}
