--- a/tags/usr/local/lsws/conf/httpd_config.conf
+++ b/tags/usr/local/lsws/conf/httpd_config.conf
@@ -10,11 +10,17 @@ mime                      conf/mime.properties
 showVersionNumber         0
 adminEmails               support@sitepilot.io
 
-errorlog /opt/sitepilot/site/logs/server.log {
+errorlog /opt/sitepilot/site/logs/server-error.log {
   logLevel                WARN
   debugLevel              0
   rollingSize             10M
   enableStderrLog         1
+}
+
+accesslog /opt/sitepilot/site/logs/server-access.log {
+  rollingSize             10M
+  keepDays                7
+  compressArchive         0
 }
 
 indexFiles                index.html, index.php
