--- a/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
+++ b/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
@@ -1,5 +1,7 @@
 docRoot                   $VH_ROOT/public
 cgroups                   0
+user                      sitepilot
+group                     sitepilot
 
 phpIniOverride  {
     php_admin_value open_basedir "$VH_ROOT"    
