Use IP in proxy header

--- a/tags/usr/local/lsws/conf/httpd_config.conf
+++ b/tags/usr/local/lsws/conf/httpd_config.conf
@@ -8,6 +8,7 @@ autoFix503                1
 gracefulRestartTimeout    300
 mime                      conf/mime.properties
 showVersionNumber         0
+useIpInProxyHeader        1
 adminEmails               support@sitepilot.io
 
 errorlog /opt/sitepilot/site/logs/server-error.log {
