Enable .htaccess auto load

--- a/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
+++ b/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
@@ -15,6 +15,11 @@ phpIniOverride  {
     php_admin_value mail.log $VH_ROOTlogs/php_mail.log
 }
 
+rewrite  {
+    enable                1
+    autoLoadHtaccess      1
+}
+
 errorlog $VH_ROOT/logs/error.log {
     useServer             0
     logLevel              NOTICE
