--- a/tags/usr/local/lsws/conf/httpd_config.conf
+++ b/tags/usr/local/lsws/conf/httpd_config.conf
@@ -227,5 +227,7 @@ listener http {
 listener https {
   address                 *:443
   secure                  1
+  keyFile                 $SERVER_ROOT/admin/conf/webadmin.key
+  certFile                $SERVER_ROOT/admin/conf/webadmin.crt
   map                     default *
 }
