--- a/tags/usr/local/lsws/conf/httpd_config.conf
+++ b/tags/usr/local/lsws/conf/httpd_config.conf
@@ -11,14 +11,14 @@ showVersionNumber         0
 useIpInProxyHeader        1
 adminEmails               support@sitepilot.io
 
-errorlog /opt/sitepilot/site/logs/server-error.log {
+errorlog /opt/sitepilot/app/logs/server-error.log {
   logLevel                WARN
   debugLevel              0
   rollingSize             10M
   enableStderrLog         1
 }
 
-accesslog /opt/sitepilot/site/logs/server-access.log {
+accesslog /opt/sitepilot/app/logs/server-access.log {
   rollingSize             10M
   keepDays                7
   compressArchive         0
@@ -112,7 +112,7 @@ extprocessor lsphp {
   address                 uds://tmp/lshttpd/lsphp.sock
   maxConns                5
   env                     PHP_LSAPI_CHILDREN=5
-  env                     LSAPI_AVOID_FORK=200M
+  env                     LSAPI_AVOID_FORK=0
   initTimeout             60
   retryTimeout            0
   persistConn             1
@@ -211,7 +211,7 @@ module mod_security {
 }
 
 virtualhost default {
-  vhRoot                  /opt/sitepilot/site
+  vhRoot                  /opt/sitepilot/app
   configFile              $SERVER_ROOT/conf/vhosts/$VH_NAME/vhconf.conf
   allowSymbolLink         1
   enableScript            1
