--- a/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
+++ b/tags/usr/local/lsws/conf/vhosts/default/vhconf.conf
@@ -4,12 +4,12 @@ user                      sitepilot
 group                     sitepilot
 
 phpIniOverride  {
-    php_admin_value open_basedir "$VH_ROOT"    
+    php_admin_value open_basedir "$VH_ROOT:/opt/sitepilot/health"    
     php_admin_value date.timezone "Europe/Amsterdam"
-    php_admin_value post_max_size "62M"
+    php_admin_value post_max_size "32M"
     php_admin_value upload_max_filesize "32M"
     php_admin_value memory_limit "256M"
-    php_admin_value sys_temp_dir $VH_ROOT/temp
+    php_admin_value sys_temp_dir $VH_ROOTtemp
     php_admin_value sendmail_path /usr/bin/msmtp -t
     php_admin_value error_log $VH_ROOTlogs/php_error.log
     php_admin_value mail.log $VH_ROOTlogs/php_mail.log
@@ -45,4 +45,14 @@ accesslog $VH_ROOT/logs/visitors.log {
     useServer             0
     logFormat             %a
     rollingSize           0
+}
+
+context /.sitepilot/health/ {
+    location              /opt/sitepilot/health/
+    allowBrowse           1
+    addDefaultCharset     off
+    rewrite  {
+      enable              1
+      inherit             0
+    }
 }
