Update server config

--- a/tags/usr/local/lsws/conf/httpd_config.conf
+++ b/tags/usr/local/lsws/conf/httpd_config.conf
@@ -110,9 +110,9 @@ accessControl  {
 extprocessor lsphp {
   type                    lsapi
   address                 uds://tmp/lshttpd/lsphp.sock
-  maxConns                5
-  env                     PHP_LSAPI_CHILDREN=5
-  env                     LSAPI_AVOID_FORK=0
+#  maxConns                5
+#  env                     PHP_LSAPI_CHILDREN=5
+#  env                     LSAPI_AVOID_FORK=0
   initTimeout             60
   retryTimeout            0
   persistConn             1
@@ -149,57 +149,21 @@ railsDefaults  {
   procHardLimit           600
 }
 
-wsgiDefaults  {
-  maxConns                5
-  env                     LSAPI_MAX_IDLE=60
-  initTimeout             60
-  retryTimeout            0
-  pcKeepAliveTimeout      60
-  respBuffer              0
-  backlog                 50
-  runOnStartUp            3
-  extMaxIdleTime          300
-  priority                3
-  memSoftLimit            2047M
-  memHardLimit            2047M
-  procSoftLimit           500
-  procHardLimit           600
-}
-
-nodeDefaults  {
-  maxConns                5
-  env                     LSAPI_MAX_IDLE=60
-  initTimeout             60
-  retryTimeout            0
-  pcKeepAliveTimeout      60
-  respBuffer              0
-  backlog                 50
-  runOnStartUp            3
-  extMaxIdleTime          300
-  priority                3
-  memSoftLimit            2047M
-  memHardLimit            2047M
-  procSoftLimit           500
-  procHardLimit           600
-}
-
 module cache {
-  internal                1
-
-checkPrivateCache   1
-checkPublicCache    1
-maxCacheObjSize     10000000
-maxStaleAge         200
-qsCache             1
-reqCookieCache      1
-respCookieCache     1
-ignoreReqCacheCtrl  1
-ignoreRespCacheCtrl 0
-
-enableCache         0
-expireInSeconds     3600
-enablePrivateCache  0
-privateExpireInSeconds 3600
+  internal            1
+  checkPrivateCache   1
+  checkPublicCache    1
+  maxCacheObjSize     10000000
+  maxStaleAge         200
+  qsCache             1
+  reqCookieCache      1
+  respCookieCache     1
+  ignoreReqCacheCtrl  1
+  ignoreRespCacheCtrl 0
+  enableCache         0
+  expireInSeconds     3600
+  enablePrivateCache  0
+  privateExpireInSeconds 3600
   ls_enabled              1
 }
 
